# webrtc-tight

./: .gitignore  Cargo.toml  README.md
footballers/: Cargo.toml
footballers/assets/: wasm_peer_config.js
footballers/scripts/: wasm_build.html  wasm_build.sh
footballers/src/: js_interface.rs  lib.rs  main.rs
footballers/src/components/: game.rs  home.rs
footballers/src/game/: host.rs  mod.rs
protocol/src/: lib.rs  one_to_one.rs
signaling-server/: Cargo.toml
signaling-server/src/: main.rs  one_to_one.rs  wasm_peer_config.js
