[package]
name = "wasm-peers-signaling-server"
version = "0.3.0"
authors = ["Tomasz Karwowski <to.karwowski@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust and compiling to WASM."
#homepage
repository = "https://github.com/wasm-peers/wasm-peers"
keywords = ["wasm", "webrtc", "datachannel", "peer-to-peer", "webassembly"]
categories = ["wasm", "network-programming", "web-programming"]
readme = "README.md"

[features]
default = ["stun-turn"]
stun-turn = ["stun", "turn", "tokio/full"]

[dependencies]
stun = { version = "0.4.2", optional = true }
turn = { version = "0.5.4", optional = true }
futures-util = "0.3.21"
rmp = "0.8.11"
rmp-serde = "1.1"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
warp = "0.3.2"
simplelog = "0.8.0"
log = "0.4.8"


wasm-peers-protocol = { path = "../protocol", version = "0.3" }
